syntax = "proto3";

package auth;

//service Auth {
//  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
//  rpc SignIn (SignInRequest) returns (SignInResponse) {}
//
//  // Used for test
//  rpc PingPong (Ping) returns (Pong) {}
//}

message GMessage {
  MsgType msgType = 1; //消息类型
  MsgCode msgCode = 2; //消息码 用于表示具体业务类型
  Request request = 3; //请求类型
  Response response = 4; //答复类型
  int32  seqId = 5;
  ErrNum errNum = 6;  // 错误类型
}

message Request {
  SignInRequest signInRequest = 1;
  SignUpRequest signUpRequest = 2;
  RegisterRequest registerRequest = 3;
  Ping ping = 4;
}

message  Response {
  SignInResponse signInResponse = 1;
  SignUpResponse signUpResponse = 2;
  RegisterResponse registerResponse = 3;
  Pong pong = 4;
}

// used for request dgs address
message  RegisterRequest {}

message RegisterResponse {
  Address addr = 1;
}

// Used for sign up, support for mobilePhone currently
message SignUpRequest {
  string mobilePhone = 1;
  string password = 2;
}

message SignUpResponse {
  bool isSignUp = 1;
  int32 playerId = 2;
  Address  addr = 3;
}

// Used for sign in, support for mobilePhone currently
message SignInRequest {
  string mobilePhone = 1;
  string password = 2;
}

message SignInResponse {
  bool isLogin = 1;
  int32 playerId = 2;
  Address addr = 3;
}

// Used for test
message Ping {
  string req = 1;
}

message Pong {
  string rsp = 1;
}

// util message
message  Address {
  string ip = 1;
  int32 port = 2;
}

enum MsgType {
  NOTIFY = 0;
  REQUEST = 1;
  RESPONSE = 2;
}

enum MsgCode {
  SIGN_IN = 0;
  SIGN_UP = 1;
  REGISTER_ADDR = 2;
  PING_PONG = 3;
}

enum ErrNum {
  DUPLICATE_PHONE = 0;  // 手机号已存在
  PASSWORD_MISMATCH = 1;  // 账号密码与数据库信息不匹配
  WRONG_PHONE_FORMAT = 2; // 手机号格式不对
  ACCOUNT_NOT_EXIST = 3;   // 账户不存在
  REGULAR_MSG = 4;         // 正常消息，无错误
}
//// Account full info
//message  Account {
//  string id = 1;
//  string mobilePhone = 2;
//  string name = 3;
//  string password = 4;
//  int32  level = 5;
//  string region = 6;
//  string qq = 7;
//  string wechat = 8;
//}

